# ingonyama-ctf-solutions

./: README.md
TaleOfTwoKeys/: Cargo.toml  README.md
TaleOfTwoKeys/src/: main.rs
breaking_into_vault_of_loki/: README.md  pwn.py
breaking_into_vault_of_loki/src/: main.rs
ctf-day-of-sagittarius/: Cargo.toml  README.md  enemy.txt
ctf-day-of-sagittarius/fairclient/: Cargo.toml  rust-toolchain.toml
ctf-day-of-sagittarius/fairclient/src/: board.rs  interface.rs  logger.rs  main.rs  net_utils.rs  session.rs  utils.rs
ctf-day-of-sagittarius/sagittarius/game/: Cargo.toml
ctf-day-of-sagittarius/sagittarius/game/src/: abilities.rs  lib.rs  state.rs  types.rs
ctf-day-of-sagittarius/sagittarius/methods/: Cargo.toml  build.rs
ctf-day-of-sagittarius/sagittarius/methods/guest/: Cargo.toml
ctf-day-of-sagittarius/sagittarius/methods/src/: lib.rs  methods.rs
ctf-day-of-sagittarius/sagittarius/zk/: Cargo.toml
ctf-day-of-sagittarius/sagittarius/zk/src/: lib.rs
ctf-over-9000/: README.md
ctf-over-9000/src/: main.rs
lost-funds/: pwn.py
operation_zk_rescue/: Cargo.toml  README.md
operation_zk_rescue/src/: flag_check.rs  main.rs  prover.rs
power-of-integers/: pwn.py
safe-bn-254/: pwn.py
the_lost_relic/: README.md  pwn.py
the_lost_relic/src/: main.rs  solver.rs
zokclub/: proof.json
zokclub-as-it-should/: membership.zok  proof.json
zokclub-as-it-should/gpi/: GPI.py  inputs.json  merkle_tree.py  tree.json
zokclub/gpi/: GPI.py  abi.json  inputs.json  tree.json  zok_constants.py  zok_poseidon.py
